--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
+    "fastest-validator": "^0.6.17",
     "uid-safe": "^2.1.5"
   }
 }
